--- a/UtilidadesWebApp/Views/Home/Index.cshtml
+++ b/UtilidadesWebApp/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4"><a href="/Paradas/Index">Paradas</a></h1>
+    <h1 class="display-4"><a href="/Paradas/Index">Paradas de bus y tranvia</a></h1>
     
 </div>
