--- a/UtilidadesWebApp/Views/Paradas/Cercanas.cshtml
+++ b/UtilidadesWebApp/Views/Paradas/Cercanas.cshtml
@@ -4,5 +4,10 @@
 }
 
     <div class="text-center">
-         Posiciones cercanas
+        Posiciones cercanas: <br/>
+
+        @foreach (var parada in Model)
+        {
+        <p><button type="button" class="btn btn-success" onclick="window.location='@Url.Action("Cercanas","Paradas")'+'?parada=@parada.numero'"> @parada.numero </button></p>
+        }
     </div>
