--- a/UtilidadesWebApp/Views/Paradas/Index.cshtml
+++ b/UtilidadesWebApp/Views/Paradas/Index.cshtml
@@ -37,25 +37,22 @@
 
     boton.disabled = true;
 
-    if (!navigator.geolocation) {
-        output.value = "<p>Geolocation is not supported by your browser</p>";
-    }
+    var endpoint = 'http://ip-api.com/json/?fields=status,message,lat,lon';
 
-    function success(position) {
-        var latitude = position.coords.latitude;
-        var longitude = position.coords.longitude;
-
-        output.value = latitude + '|' + longitude
-        boton.disabled = false;
-
+    var xhr = new XMLHttpRequest();
+    xhr.onreadystatechange = function () {
+        if (this.readyState == 4 && this.status == 200) {
+            var response = JSON.parse(this.responseText);
+            if (response.status !== 'success') {
+                output.value = 'query failed: ' + response.message;
+                return
+            }
+            else {
+                output.value = response.lat + '|' + response.lon;
+            }
+        }
     };
-
-    function error() {
-        output.value = "Unable to retrieve your location";
-    };
-
-    output.value = "<p>Locating…</p>";
-
-    navigator.geolocation.getCurrentPosition(success, error);
+    xhr.open('GET', endpoint, true);
+    xhr.send();
 
 </script>
