--- a/UtilidadesWebApp/Views/Paradas/Index.cshtml
+++ b/UtilidadesWebApp/Views/Paradas/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <form action="/Paradas/Cercanas" method="get">
-        <h1 class="display-3">Obteniendo posición <br />(pulse para detectar paradas)</h1>
+        <h1 class="display-3">Busque paradas</h1>
         <div class="form-group mx-sm-3 mb-2">
             <input type="text" class="form-control" name="parada" id="parada" placeholder="Parada o blancos para guardadas">
         </div>
@@ -18,12 +18,8 @@
         <div class="form-check">
             <button type="submit" id="Buscar" class="btn btn-success"> Buscar paradas</button>
         </div>
-        <div class="form-check">
-            <div class="form-group mx-sm-3 mb-2">
-
-
-                <input type="text" class="form-control" name="posicion" id="posicion" placeholder="Obteniendo posición...">
-            </div>
+        <div class="form-group mx-sm-3 mb-2">
+            <input type="text" class="form-control" name="posicion" id="posicion" placeholder="Obteniendo posición...">
         </div>
 
     </form>
@@ -49,6 +45,7 @@
             }
             else {
                 output.value = response.lat + '|' + response.lon;
+                boton.disabled = false;
             }
         }
     };
